bugfix: inner text on mobile

--- a/src/css/_section-inner.scss
+++ b/src/css/_section-inner.scss
@@ -4,7 +4,7 @@
   }
   &__inner {
 
-    padding: 0 10px;
+    padding: 54px 10px 0;
     font-size: 16px;
     line-height: 24px;
     max-width: 580px;
